objects/webm__Webmerge_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>webm__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Autogenerate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autogenerate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use batch mode when generating document</description>
        <label>Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>webm__Download_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Download File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Evaluation_Criteria__c</fullName>
        <label>Evaluation Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>created</fullName>
                </value>
                <value>
                    <fullName>created, and every time it&apos;s edited</fullName>
                </value>
                <value>
                    <fullName>created, and any time it&apos;s edited to subsequently meet criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Filter_Type__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All conditions are met</fullName>
                    <default>true</default>
                    <label>All conditions are met</label>
                </value>
                <value>
                    <fullName>Any conditions are met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Post_to_Chatter_Feeds__c</fullName>
        <description>Comma separated list of Field Names for related object&apos;s chatter feeds</description>
        <label>Post to Chatter Feeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Post_to_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post merged documents to Chatter</description>
        <label>Post to Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Resource__c</fullName>
        <label>Resource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Document</fullName>
                    <default>true</default>
                    <label>Document</label>
                </value>
                <value>
                    <fullName>Route</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Salesforce_Object_Name__c</fullName>
        <label>Salesforce Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>webm__Save_Attachment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Save merged documents as an Attachment on the record</description>
        <label>Save Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Save_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Test_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Document_Id__c</fullName>
        <label>Webmerge Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Document_Key__c</fullName>
        <label>Webmerge Document Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Document_Name__c</fullName>
        <label>Webmerge Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webm__Webmerge_Document_Type__c</fullName>
        <label>Webmerge Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Formstack Mapping</label>
    <nameField>
        <label>Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formstack Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>